--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -25,7 +25,7 @@
                             </a>
                             {% if current_user.is_authenticated %}
                             <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                                Profile
+                                Upload File
                             </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
@@ -39,6 +39,11 @@
                             {% if current_user.is_authenticated %}
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
+                            </a>
+                            {% endif %}
+                            {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.files') }}" class="navbar-item">
+                                Manage Files
                             </a>
                             {% endif %}
                         </div>
