--- a/my_app/templates/profile.html
+++ b/my_app/templates/profile.html
@@ -4,6 +4,32 @@
 
 {% block content %}
 <h1 class="title">
-  Welcome, {{ name }}!
+  Bienvenid@, {{ name }}, ¡Sube tu archivo!
 </h1>
+
+<div class="column is-4 is-offset-4">
+  
+
+      <form method="POST" action="/login">
+          <div class="field">
+              <div class="control">
+                  <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+              </div>
+          </div>
+
+          <div class="field">
+              <div class="control">
+                  <input class="input is-large" type="password" name="password" placeholder="Your Password">
+              </div>
+          </div>
+          <div class="field">
+              <label class="checkbox">
+                  <input type="checkbox">
+                  Remember me
+              </label>
+          </div>
+          <button class="button is-block is-info is-large is-fullwidth">Login</button>
+      </form>
+  </div>
+</div>
 {% endblock %}
