--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -24,7 +24,7 @@
                                 Home
                             </a>
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
+                            <a href="{{ url_for('main.upload') }}" class="navbar-item">
                                 Upload File
                             </a>
                             {% endif %}
