--- a/my_app/templates/upload.html
+++ b/my_app/templates/upload.html
@@ -6,26 +6,28 @@
 <h1 class="title">
   Bienvenid@, {{ name }}, ¡Sube tu archivo!
 </h1>
-
-<div class="column is-4 is-offset-4">
-  <div class="file has-name">
-    <label class="file-label">
-      <input class="file-input" type="file" name="resume">
-      <span class="file-cta">
-        <span class="file-icon">
-          <i class="fas fa-upload"></i>
+<form method="POST" enctype=multipart/form-data >
+  <div class="column is-4 is-offset-4">
+    <div class="file has-name">
+      <label class="file-label">
+        <input class="file-input" type="file" name="resume">
+        <span class="file-cta">
+          <span class="file-icon">
+            <i class="fas fa-upload"></i>
+          </span>
+          <span class="file-label">
+            Choose a file…
+          </span>
         </span>
-        <span class="file-label">
-          Choose a file…
+        <span class="file-name">
+          Screen Shot 2017-07-29 at 15.54.25.png
         </span>
-      </span>
-      <span class="file-name">
-        Screen Shot 2017-07-29 at 15.54.25.png
-      </span>
-    </label>
-  </div>
+      </label>
+    </div>
+    <input class="button" type="submit" value="Submit input">
+    <input class="button" type="reset" value="Reset input">
+</form>
 
-<input class="button" type="submit" value="Submit input">
-<input class="button" type="reset" value="Reset input">
+
  </div> 
 {% endblock %}
