salva archivo pero no donde quiero

--- a/my_app/templates/upload.html
+++ b/my_app/templates/upload.html
@@ -1,4 +1,4 @@
-<!-- templates/upload.html -->
+<!-- templates/profile.html -->
 
 {% extends "base.html" %}
 
@@ -10,9 +10,7 @@
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type = "submit"/>
-      </form>  
-  </div>
-</form>
+      </form>   
 
 
  </div> 
