--- a/my_app/templates/files.html
+++ b/my_app/templates/files.html
@@ -5,10 +5,8 @@
 
 {% block content %}
 <h2 class="title">
-  Upload your file
-</h2>
-
-<h2 class="title">
   List of files!
 </h2>
+
+{{ files }}
 {% endblock %}
