--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="hero has-background-info-link-light is-fullheight">
+    <section class="hero is-primary-light is-fullheight">
 
         <div class="hero-head">
             <nav class="navbar">
