--- a/my_app/templates/files.html
+++ b/my_app/templates/files.html
@@ -30,5 +30,10 @@
     <button class="button is-link" name="submit_button" value="descarga">Descargar archivo</button>
   </form>
       </form>   
+      <br> </br>
+      <h3 class="subtitle">
+        {{ respuesta }}
+      </h3>
+    </p>
  </div> 
 {% endblock %}
