funciona todo menos is admin

--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -3,10 +3,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-  Flask Login Example
-</h1>
-<h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+<h2 class="title">
+  <img src="https://ravenloop.io/wp-content/uploads/2020/06/Logo-ravenloop-PEQ.png" alt="" width="50%" height="50%" >
 </h2>
+<h1 class="subtitle">
+  Prueba técnica
+
+</h1>
+<h1 class="subtitle">
+  Amanda Gálvez Corell
+
+</h1>
 {% endblock %}
