--- a/my_app/templates/files.html
+++ b/my_app/templates/files.html
@@ -8,7 +8,8 @@
 <h2 class="title">
   Archivos del servidor
 </h2>
-<div class="column is-8 is-offset-4">
+<div class="columns">
+<div class="column is-1"></div>
 {% for table in tables %}
             {{titles[loop.index]}}
             {{ table|safe }}
