--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -3,11 +3,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 class="title">
-  <img src="https://ravenloop.io/wp-content/uploads/2020/06/Logo-ravenloop-PEQ.png" alt="" width="50%" height="50%" >
-</h2>
-<h1 class="subtitle">
-  Prueba técnica
+
+<h1 class="title">
+  Mi API con login y gestión de archivos
 
 </h1>
 <h1 class="subtitle">
